Revert MAVEN_OPTS